# uncertainty

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS-ops.md  AGENTS.md  Makefile  README.md  project.config.yaml  pyproject.toml  pytest.ini  requirements-ops.txt
.github/workflows/: environment-locks.yml  integrate-agents-ops.yml  one-time-agents-topology.yml  one-time-fast-track-debug.yml  one-time-frontier-agents.yml  one-time-frontier-cleanup.yml  one-time-manuscript-agents.yml  one-time-topology-doc-migration.yml  one-time-uq-refocus-agents.yml  one-time-uq-refocus.yml  ops-tests.yml
artifacts/environments/: environment-W0-LINX-autodl-westb-01.json  environment-W1-PRYM-autodl-westb-01.json  environment-W2-PRIMAT-autodl-westb-01.json  environment-W3-ABCMB-autodl-westb-01.json  environment-solver-cpu-autodl-westb-01.json  environment-train-gpu-autodl-westb-01.json
artifacts/gates/: FISHER_GATE_REPORT_v1.md
artifacts/solver-build/: DIRECT_SOLVER_SMOKE_v1.json
artifacts/validation/: SAGENET_CHECKPOINT_STRUCTURAL_v1.json
configs/benchmarks/: R0_reference_fast_track_v1.yaml  abcmb_full_component_audit_v1.yaml  abcmb_linx_batch_consistency_v1.yaml  abcmb_linx_extended_convergence_v2.yaml  abcmb_linx_runtime_adapter_v1.yaml  gp_deuterium_prior_structure_v1.yaml  linx_batch_tolerance_scan_v1.yaml  linx_convergence_rerun_v4.yaml  linx_extended_convergence_scan_v2.yaml  linx_gradient_stability_v1.yaml  linx_max_steps_diagnostic_v3.yaml  linx_native_q_reproduction_v1.yaml  linx_native_q_reproduction_v2.yaml  primat_native_uq_reproduction_v1.yaml  prymordial_native_uq_reproduction_v1.yaml  prymordial_runtime_adapter_v1.yaml  sensitivity_atlas_R0_slice_v1.yaml  why_not_evidence_status_v1.yaml  why_not_existing_solvers_v1.yaml  why_not_result_registry_policy_v1.yaml  why_not_standard_challenge_grid_v1.yaml
configs/claims/: claim_evidence_matrix_v1.yaml
configs/data/: abundance_OBS-v1.yaml  cmb_data_v1.yaml  gw_data_v1.yaml  manuscript_abundance_v1.yaml
configs/models/: bbnet_legacy_v1.yaml  (+2 more)
deploy/: hosts.local.env.example  research-ops.service
docs/: index.html  tasks.json
environments/: README.md  toolchain.yaml
environments/abcmb-v0.3.1/: pyproject.toml
environments/linx-v0.1.2/: interpax-sidecar.txt  pyproject.toml
environments/solver-cpu/: pyproject.toml
environments/train-gpu/: pyproject.toml
legacy/bbnet/upstream-ea66fe6/BBNet/: LICENSE  README.md  pyproject.toml
legacy/bbnet/upstream-ea66fe6/BBNet/bbnet/: _init_.py  inference.py  model.py
legacy/bbnet/upstream-ea66fe6/BBNet/bbnet/tests/: test_inference.py
orchestrator/: __init__.py  dashboard.html  reconcile.py  status_server.py  store.py  summarize.py
plan/: plan.yaml
scripts/: R0_reference_adapter.py  abcmb_full_component_audit.py  apply_frontier_review_to_agents.py  apply_manuscript_pivot_to_agents.py  apply_uncertainty_refocus_to_agents.py  autodl_node_status.sh  bbnet_schema_adapter.py  bootstrap_autodl.sh  bootstrap_science_env.sh  bootstrap_vultr.sh  bootstrap_why_not_env.sh  bootstrap_worker.sh  build_R0_prior_candidate_contract.py  build_etr25_R0_coherent_comparators.py  build_etr25_R0_ingest_package.py  build_etr25_R0_rate_pdf_audit.py  build_nuclear_stage0_R0_package.py  build_why_not_uq_interim_economics.py  capture_gp_deuterium_prior_structure.py  capture_public_nuclear_rate_provenance.py  capture_worker_inventory.py  cleanup_uq_agents.py  fetch_ml4gw_upstreams.sh  fetch_why_not_baselines.sh  fix_frontier_merge_artifacts.py  generate_why_not_result_registry.py  integrate_agents_ops.py  linx_batch_tolerance_scan.py  linx_gradient_stability_scan.py  ops_demo_job.py  register_scientific_asset.py  render_local_topology_bundle.py  replay_heartbeat_outbox.py  run_R0_correlation_sampler_audit.py  run_R0_reference_sigma_points.py  run_linx_R0_mapping_regression.py  run_linx_native_q_reproduction.py  run_linx_native_q_reproduction_v2.py  run_offline_heartbeat_e2e.py  run_primat_R0_reverse_regression.py  (+36 more)
state/: SUMMARY.md  tasks.json
taskctl/: taskctl.py
worker/: primat_rate_draw.py  run_with_heartbeat.py
(+319 files in other folders)
