[project]
name = "uncertainty-abcmb-v0-3-1"
version = "0.2.1"
description = "Dedicated environment for the frozen ABCMB v0.3.1 baseline"
requires-python = "==3.11.15"
dependencies = [
  "abcmb",
  "equinox==0.13.2",
  "jax==0.8.1",
  "matplotlib==3.10.7",
  "numpy==2.3.5",
  "optimistix==0.0.11",
  "pytest==9.0.2",
  "scipy==1.16.3",
]

[tool.uv]
package = false

[tool.uv.sources]
abcmb = { git = "https://github.com/TonyZhou729/ABCMB.git", rev = "5eabbab4ed7e53f264e16024743d1ba517845c37" }
