[project]
name = "uncertainty-train-gpu"
version = "0.2.1"
description = "Pinned CUDA/PyTorch environment for BBNet-UQ training"
requires-python = "==3.11.15"
dependencies = [
  "arviz==0.22.0",
  "emcee==3.1.6",
  "h5py==3.15.1",
  "joblib==1.5.2",
  "matplotlib==3.10.7",
  "numpy==2.3.5",
  "pandas==2.3.3",
  "PyYAML==6.0.3",
  "scikit-learn==1.7.2",
  "scipy==1.16.3",
  "torch==2.12.1+cu130",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
